1. fixed some bugs on the winphone side (e.g. default item types for lists, and also the initialization code for the default folders that are created locally). 2. tweaked the CSS for the suggestion list a bit in order to accomodate longer text for Suggestion Buttons - it now wraps over another line if necessary. 3. added the ability to templatize GroupDisplayName based on variables that come out of the workflow's InstanceData.

--- a/source/services/website/content/dashboard/Dashboard.css
+++ b/source/services/website/content/dashboard/Dashboard.css
@@ -117,13 +117,16 @@ Dashboard Suggestions
 
 .group-button {
     Xcursor: pointer;
-    white-space: nowrap;
+/*  white-space: nowrap; */
     font-weight: bold;
     color: #E2E6E6;
     margin: 4px 10px 0 10px;
     padding: 4px 0 2px 0;
     width: 180px;
-    height: 20px;
+    min-height: 20px;
+    max-height: 60px;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
     text-align: center;
     background-color: #AEC2D0;
